# rtt-viewer

./: .gitignore  package-lock.json  package.json  readme.md
.github/workflows/: release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
ui/: app.js  index.html  log-engine.js  log-io.js  profiles.js  styles.css
