[package]
name = "rtt-viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
tokio = { version = "1", features = ["process", "io-util", "sync", "macros", "time"] }
libc = "0.2"
dirs = "5"
probe-rs = "0.25"
goblin = "0.9"
tauri-plugin-dialog = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
